upgrade to x402 v2 with official migration guide pattern

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@tanstack/react-query": "^5.90.16",
+    "@x402/evm": "^2.2.0",
     "@x402/fetch": "^2.2.0",
     "@x402/next": "^2.2.0",
     "@x402/paywall": "^2.2.0",
