--- a/package.json
+++ b/package.json
@@ -9,18 +9,13 @@
     "lint": "eslint"
   },
   "dependencies": {
-    "@tanstack/react-query": "^5.90.16",
     "@x402/evm": "^2.2.0",
     "@x402/fetch": "^2.2.0",
     "@x402/next": "^2.2.0",
-    "@x402/paywall": "^2.2.0",
     "next": "16.1.1",
     "react": "19.2.3",
     "react-dom": "19.2.3",
-    "viem": "^2.44.1",
-    "wagmi": "^3.3.2",
-    "x402-fetch": "^1.1.0",
-    "x402-next": "^1.1.0"
+    "viem": "^2.44.1"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
